# robot-test-split

./: .gitignore  README.md  output.xml  test_splitter.py
robot-test-split-pkg/: pyproject.toml
robot-test-split-pkg/src/robot_test_split/: __init__.py  cli.py  discovery.py  html.py  splitter.py  utils.py
split_results/: split_robot_report_2026-03-28_12-49-59.md
split_results/split_html_2026-03-28_12-49-59/: 01_TC01_-_Greeting_2026-03-28_12-49-59.log.html  02_TC02_-_Sum_Calculation_2026-03-28_12-49-59.log.html  03_TC03_-_Positive_Number_Check_2026-03-28_12-49-59.log.html  04_TC04_-_Non-Empty_String_2026-03-28_12-49-59.log.html  05_TC05_-_Uppercase_Conversion_2026-03-28_12-49-59.log.html  06_TC06_-_List_Length_2026-03-28_12-49-59.log.html  07_TC07_-_Boolean_Flag_2026-03-28_12-49-59.log.html  08_TC08_-_Full_Name_Concatenation_2026-03-28_12-49-59.log.html  09_TC09_-_Even_Number_Validation_2026-03-28_12-49-59.log.html  10_TC10_-_Word_Repetition_2026-03-28_12-49-59.log.html
split_results/split_xml_2026-03-28_12-49-59/: 01_TC01_-_Greeting_2026-03-28_12-49-59.xml  02_TC02_-_Sum_Calculation_2026-03-28_12-49-59.xml  03_TC03_-_Positive_Number_Check_2026-03-28_12-49-59.xml  04_TC04_-_Non-Empty_String_2026-03-28_12-49-59.xml  05_TC05_-_Uppercase_Conversion_2026-03-28_12-49-59.xml  06_TC06_-_List_Length_2026-03-28_12-49-59.xml  07_TC07_-_Boolean_Flag_2026-03-28_12-49-59.xml  08_TC08_-_Full_Name_Concatenation_2026-03-28_12-49-59.xml  09_TC09_-_Even_Number_Validation_2026-03-28_12-49-59.xml  10_TC10_-_Word_Repetition_2026-03-28_12-49-59.xml
